# Fluxnet

./: .gitignore  Cargo.toml  GEMINI.md  LLM_CONTEXT.md  README.md  TODO.md  design.md
crates/fluxcapacitor/: Cargo.toml
crates/fluxcapacitor-core/: Cargo.toml  build.rs
crates/fluxcapacitor-core/src/: windows_stubs.rs
crates/fluxcapacitor-ebpf/: Cargo.toml
crates/fluxcapacitor-ebpf/src/: main.rs
crates/fluxcapacitor-proto/: Cargo.toml
crates/fluxcapacitor/src/: builder.rs  error.rs  simulator.rs
crates/fluxcapacitor/src/engine/: batch.rs  runner.rs
crates/fluxcapacitor/src/packet/: owned.rs  raw.rs
crates/fluxcapacitor/src/raw/: socket.rs
crates/fluxcapacitor/src/system/: reactor.rs  rx.rs  shared.rs  tx.rs
crates/fluxcapacitor/tests/: linux_engine_icmp.rs  linux_system_echo.rs  loopback_linux.rs  p0_verification.rs  protocol_verification.rs  raw_mode_debug.rs  simulated_traffic.rs
crates/fluxnet/: Cargo.toml
crates/fluxnet-core/: Cargo.toml  build.rs
crates/fluxnet-core/src/: lib.rs  (+1 more)
crates/fluxnet-ebpf/: Cargo.toml
crates/fluxnet-proto/: Cargo.toml
crates/fluxnet/src/: builder.rs  config.rs  lib.rs  simulator.rs
crates/fluxnet/src/engine/: batch.rs  mod.rs  runner.rs
crates/fluxnet/src/packet/: mod.rs  owned.rs  raw.rs
crates/fluxnet/src/raw/: mod.rs  socket.rs
crates/fluxnet/src/system/: mod.rs  reactor.rs  rx.rs  tx.rs
crates/fluxnet/tests/: linux_engine_icmp.rs  linux_system_echo.rs  loopback_linux.rs  p0_verification.rs  protocol_verification.rs  raw_mode_debug.rs  simulated_traffic.rs
scripts/: attach_xdp.sh  setup_veth.sh
(+24 files in other folders)
